--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
     <section class="bg-default text--center  align-center font">
         <div>
             <h3>See how it all comes together</h3>
-            <a href="{{ url_for('sister_companies') }}" class="btn">Our Divisions</a>
+            <a href="sister_companies.html" class="btn">Our Divisions</a>
         </div>
     </section>
 
@@ -140,7 +140,7 @@
                                 <img  class="mb20" src="/static/icons/ribbon-icons-02.png" height="50%" width="50%">
                                 <h3>Reliability</h3>
                                 <p> Family-owned, 70+ years in business, all products are American-made</p>
-                                <a href="{{ url_for('sister_companies') }}" class="btn btn-outline mt20">about Empco-Lite</a> </div>
+                                <a href="sister_companies.html" class="btn btn-outline mt20">about Empco-Lite</a> </div>
                         </div>
                         <div class="col-md-4 col-sm-12 nopadding col-xs-12">
                             <div class="bg-white pinside60 number-block outline">
@@ -148,7 +148,7 @@
                                 <img class="mb20" src="/static/icons/icons-02.png" height="50%" width="50%">
                                 <h3>Pride in our Work</h3>
                                 <p> We are committed to producting high-quality products</p>
-                                <a href="{{ url_for('process') }}" class="btn btn-outline mt20">Our Process</a> </div>
+                                <a href="process.html" class="btn btn-outline mt20">Our Process</a> </div>
                         </div>
                         <div class="col-md-4 col-sm-6 nopadding col-xs-12">
                             <div class="bg-white pinside60 number-block outline">
@@ -156,7 +156,7 @@
                                 <img class="mb20" src="/static/icons/icons-04.png" height="50%" width="50%">
                                 <h3>Communication</h3>
                                 <p>Our dedicated reps focus on clear and concise customer communication</p>
-                                <a href="{{ url_for('contact') }}" class="btn btn-outline mt20">Meet the team</a> </div>
+                                <a href="contact.html" class="btn btn-outline mt20">Meet the team</a> </div>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
         <div class="oldworld-container">
             <h1>Our Process</h1>
             <h3>Empco-lite products are made right on our own turf, at Elgin Molded</h3>
-            <a href="{{ url_for('process') }}" class="btn-2">Learn More</a>
+            <a href="process.html" class="btn-2">Learn More</a>
         </div>
     </div>
 </div>
