--- a/templates/index.html
+++ b/templates/index.html
@@ -56,23 +56,23 @@
 <div class="accordion">
     <ul>
         <li>
-            <div> <a href="{{ url_for('highway_construction_lighting') }}">
+            <div> <a href="lighting_types/highway_construction_lighting.html">
                 <h2>Highway Lighting</h2>
                 </a> </div>
         </li>
         <li>
-            <div> <a href="{{ url_for('marine_lighting') }}">
+            <div> <a href="lighting_types/marine_lighting.html">
                 <h2>Marine Lighting</h2>
                 </a> </div>
         </li>
         
         <li>
-        <div><a href="{{ url_for('airport_lighting') }}">
+        <div><a href="lighting_types/airport_lighting.html">
             <h2>Airport Lighting</h2>
             </a></div>
         </li>
         <li>
-        <div> <a href="{{ url_for('railroad_lighting') }}">
+        <div> <a href="lighting_types/railroad_lighting.html">
             <h2>Railroad Lighting</h2>
             </a> </div>
         </li>
@@ -119,7 +119,7 @@
                     </div>
                     And More!  
 
-                    <div><a href="{{ url_for('product_line') }}" class="btn-2">View Products</a></div>
+                    <div><a href="product_line.html" class="btn-2">View Products</a></div>
 
                 </div>
 
@@ -231,7 +231,7 @@
             <h1 class="product-description">Featured Product</h1>
             <h1 class="mb30">Model 212-3S Solar Assist</h1>
             <img class="mr100" id="nav-logo" src="/static/made-in-usa-stamp.png" height="50%" width="50%">
-            <a href="{{ url_for('model212_3_S_solar_assist') }}" class="btn btn-outline mt20">View Product</a> 
+            <a href="highway/model212_3_S_solar_assist.html" class="btn btn-outline mt20">View Product</a> 
         </div>
         
         
@@ -293,7 +293,7 @@
 
 
 
-    
+
 
 <!-- Footer -->
 
