--- a/templates/lighting_types/marine_lighting.html
+++ b/templates/lighting_types/marine_lighting.html
@@ -48,7 +48,7 @@
 
 
     <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-        <a href="{{ url_for('barge_light') }}">
+        <a href="../marine/barge_light.html">
           <div class="container">
               <div class="front" style="background-image: url(/static/marine/barge_light/PLLAndBargeLight.jpg)">
                   <div class="inner">
@@ -66,7 +66,7 @@
     </div>
 
     <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-        <a href="{{ url_for('pilot_location_light') }}">
+        <a href="../marine/pilot_location_light.html">
           <div class="container">
               <div class="front" style="background-image: url(/static/marine/PLL/PilotLocationLight.jpg)">
                   <div class="inner">
@@ -89,7 +89,7 @@
 <div class="cols mb100">
 
     <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-        <a href="{{ url_for('solar_dredge_light') }}">
+        <a href="../marine/solar_dredge_light.html">
           <div class="container">
               <div class="front" style="background-image: url(/static/marine/solar_dredge_light/SolarDredgeLightClear1.jpg)">
                   <div class="inner">
@@ -107,7 +107,7 @@
       </div>
 
       <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-        <a href="{{ url_for('dredge_light') }}">
+        <a href="../marine/dredge_light.html">
           <div class="container">
               <div class="front" style="background-image: url(/static/marine/dredge_light/DredgeLightClear.jpg)">
                   <div class="inner">
@@ -129,7 +129,7 @@
         <div class="mt80 mb40"><h1>Mooring Light and Load Light</h1></div>
     <div class="cols mb100">
         
-        <a href="{{ url_for('model400_led_mooring_light') }}">
+        <a href="../marine/model400_led_mooring_light.html">
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                   <div class="container">
                       <div class="front" style="background-image: url(/static/marine/mooring_light/Model400LEDMooringLight3.jpg)">
@@ -152,7 +152,7 @@
 
 
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('load_light') }}">
+                <a href="../marine/load_light.html">
                   <div class="container">
                       <div class="front" style="background-image: url(/static/marine/load_light/LoadLight1.jpg)">
                           <div class="inner">
