--- a/templates/lighting_types/railroad_lighting.html
+++ b/templates/lighting_types/railroad_lighting.html
@@ -47,7 +47,7 @@
 <div class="cols mb100">
         
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('blue_flag_light') }}">
+            <a href="../railroad/blue_flag_light.html">
                 <div class="container">
                     <div class="front" style="background-image: url(/static/railroad/BlueFlagLight.jpg)">
                         <div class="inner">
@@ -65,7 +65,7 @@
         </div>
           
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-            <a href="{{ url_for('blue_flag_strobe_light') }}">
+            <a href="../railroad/blue_flag_strobe_light.html">
                 <div class="container">
                     <div class="front" style="background-image: url(/static/railroad/BlueFlagStrobeLight.jpg)">
                         <div class="inner">
