--- a/templates/marine/barge_light.html
+++ b/templates/marine/barge_light.html
@@ -112,7 +112,7 @@
     <p class="model">Barge Light </p>
     <p class="part-number">Part # 98-23400, 98-23400L, 98-23400LM, 98-23400M, 98-23400R, 98-23400RM</p>
     <p>Commonly purchased with: </p>
-    <a href="{{ url_for('pilot_location_light') }}" class="btn btn-outline mt20">Pilot Location Light</a> 
+    <a href="pilot_location_light.html" class="btn btn-outline mt20">Pilot Location Light</a> 
 
     <div class="container flex-row space-between">
 
