--- a/templates/contact.html
+++ b/templates/contact.html
@@ -101,7 +101,7 @@
                     <input placeholder="Your Phone Number" type="tel" name="Phone" tabindex="3" required>
                 </fieldset>
                 <fieldset>
-                    <input placeholder="Your Company" type="text" name="Company url" tabindex="4" required>
+                    <input placeholder="Your Company" type="text" name="Company" tabindex="4" required>
                 </fieldset>
                 <fieldset>
                     <textarea placeholder="Type your message here...." name="Message" tabindex="5" required></textarea>
