--- a/templates/lighting_types/highway_construction_lighting.html
+++ b/templates/lighting_types/highway_construction_lighting.html
@@ -56,7 +56,7 @@
             <!-- Model 2006 -->
     
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="model2006.html">
+                <a href="../highway/model2006.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/model2006/Model2006_1.jpg)">
                             <div class="inner">
@@ -76,7 +76,7 @@
 
         <!-- MODEL 2006 + Solar Assist -->
 
-        <a href="model2006plus_solar_assist.html">
+        <a href="../highway/model2006plus_solar_assist.html">
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                 <div class="container">
                     <div class="front" style="background-image: url(/static/highway/2006solarplus/Model2006SolarAssist3.jpg)">
@@ -99,7 +99,7 @@
             <!-- MODEL 2006 S Solar  -->
 
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="S_solar_2006.html">
+                    <a href="../highway/S_solar_2006.html">
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/S_Solar_model2006/Model2006SSolar1.jpg)">
                                 <div class="inner">
@@ -119,7 +119,7 @@
                 <!-- Model 2006 D -->
 
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="model2006d.html">
+                    <a href="../highway/model2006d.html">
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/2006AmberD-Light.jpg)">
                                 <div class="inner">
@@ -149,7 +149,7 @@
             <!--  Model 212-3LW -->
             
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="M212_3LW.html">
+                <a href="../highway/M212_3LW.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/M212-3LW/Model212-3LW.jpg)">
                             <div class="inner">
@@ -171,7 +171,7 @@
             <!-- Model 212-3 S Solar Assist -->
             
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="model212_3_S_solar_assist.html">
+                    <a href="../highway/model212_3_S_solar_assist.html">
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/S_solar212-3/Model212-3SSolarAssist2.jpg)">
                                 <div class="inner">
@@ -192,7 +192,7 @@
                 <!-- Model 212-3 Solar -->
     
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="model212_3_solar.html">
+                    <a href="../highway/model212_3_solar.html">
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/model212-3_solar/Model212-3Solar.jpg)">
                                 <div class="inner">
@@ -218,7 +218,7 @@
                     <!--  Wireless Channelizing Sequential Device -->
         
                     <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                        <a href="sequential_device.html">
+                        <a href="../highway/sequential_device.html">
                             <div class="container">
                                 <div class="front" style="background-image: url(/static/highway/Wireless_channeling/Wireless2ChannelizingSequentialDevice.jpg)">
                                     <div class="inner">
@@ -251,7 +251,7 @@
             <!--  Model Model 400 LED PC -->
             
                 <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                    <a href="LED_PC.html">
+                    <a href="../highway/LED_PC.html">
                         <div class="container">
                             <div class="front" style="background-image: url(/static/highway/LED_PC_model_400/Model400LEDPC1.jpg)">
                                 <div class="inner">
@@ -271,7 +271,7 @@
 
             <!-- audible Device model 400 ADA -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="audible_device_model_400_ADA.html">
+                <a href="../highway/audible_device_model_400_ADA.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/audible_device_ADA/Model400ADA3.jpg)">
                             <div class="inner">
@@ -290,7 +290,7 @@
 
             <!-- audible Device model 400 ADA -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="audible400ml.html">
+                <a href="../highway/audible400ml.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/Model400ML-2ADADEVICE.jpg)">
                             <div class="inner">
@@ -309,7 +309,7 @@
 
 
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="standaloneflarelight.html">
+                <a href="../highway/standaloneflarelight.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/standaloneflare/StandaloneFlareLight2.jpg)">
                             <div class="inner">
@@ -332,7 +332,7 @@
 
             <!-- audible Device model 400 ADA -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="strobeseries7400.html">
+                <a href="../highway/strobeseries7400.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/Model7400StrobeLight.jpg)">
                             <div class="inner">
@@ -351,7 +351,7 @@
 
             <!-- audible Device model 400 ADA -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="strobeseries7401.html">
+                <a href="../highway/strobeseries7401.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/Model7401StrobeLight.jpg)">
                             <div class="inner">
@@ -381,7 +381,7 @@
 
             <!-- Center Mounting Bracket -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="center_mounting_bracket.html">
+                <a href="../mounting_brackets/center_mounting_bracket.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/mounting_brackets/center/CenterMountingBracket_1.jpg)">
                             <div class="inner">
@@ -401,7 +401,7 @@
 
             <!-- Z Mounting BRACKET -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="ZMountingBracket.html">
+                <a href="../mounting_brackets/ZMountingBracket.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/mounting_brackets/z/ZMountingBracket.jpg)">
                             <div class="inner">
@@ -420,7 +420,7 @@
 
             <!-- LEFT side Mounting Bracket  -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="left_MountingBracket.html">
+                <a href="../mounting_brackets/left_MountingBracket.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/mounting_brackets/left/LeftSideMountingBracket2.jpg)">
                             <div class="inner">
@@ -440,7 +440,7 @@
 
             <!-- RIGHT side mounting bracket -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="right_MountingBracket.html">
+                <a href="../mounting_brackets/right_MountingBracket.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/mounting_brackets/right/RightSideMountingBracket1.jpg)">
                             <div class="inner">
@@ -462,7 +462,7 @@
 
             <!-- battery adapter -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="batteryadapter.html">
+                <a href="../mounting_brackets/batteryadapter.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/mounting_brackets/batteryadapter/6-VoltBatteryAdapter.jpg)">
                             <div class="inner">
@@ -491,7 +491,7 @@
     
             <!-- 10 -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="portable10.html">
+                <a href="../highway/portable10.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/portablespeedbumps/10PortableSpeedBump.jpg)">
                             <div class="inner">
@@ -510,7 +510,7 @@
     
             <!-- 20 -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="portable20.html">
+                <a href="../highway/portable20.html">
                     <div class="container">
                         <div class="front" style="background-image: url(/static/highway/portablespeedbumps/20PortableSpeedBump.jpg)">
                             <div class="inner">
