--- a/main.css
+++ b/main.css
@@ -773,10 +773,6 @@ footer ul {
   background-color: whitesmoke; 
 }
 
-.yellow-text h3{
-  color: rgba(122, 120, 119, 0.535); 
-}
-
 
 /* #OVERLAY IMAGES WITH TEXT*/
 
@@ -1169,13 +1165,12 @@ footer ul {
     opacity: 90%; 
   }
 
-  @media (max-width: 500px){
+  @media (max-width: 600px){
   .product-container{
     display: flex; 
     flex-direction:column;
     height: auto; 
-    min-width:fit-content;
-    padding: 80px;   
+    min-width:fit-content;  
   }
   }
 
@@ -1186,7 +1181,7 @@ footer ul {
 
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 800px) {
     .grid  {
       grid-auto-flow: row dense;
       grid-auto-columns: 1fr !important;
@@ -1194,19 +1189,6 @@ footer ul {
     }
     .grid div {
       grid-column: 1 / span 3;
-    }
-  }
-
-
-
-  @media (max-width: 900px) {
-    .grid-4  {
-      grid-auto-flow: row dense;
-      grid-auto-columns: 2fr !important;
-  
-    }
-    .grid-4 div {
-      grid-column: 1 / span 2;
     }
   }
 
@@ -1218,7 +1200,7 @@ footer ul {
     justify-items: center;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 890px) {
     .grid-3  {
       grid-auto-flow: row dense;
       grid-auto-columns: 1fr;
@@ -1237,7 +1219,16 @@ footer ul {
     background-color: white;  
   }
 
-
+  @media (max-width: 890px) {
+    .grid-4  {
+      grid-auto-flow: row dense;
+      grid-auto-columns: 1fr;
+  
+    }
+    .grid-4 div {
+      grid-column: 1 / span 4;
+    }
+  }
 
 
 .product-grid section:nth-of-type(3){
