--- a/static/main.css
+++ b/static/main.css
@@ -1,94 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather:wght@300&family=Open+Sans:wght@600&family=PT+Sans:wght@400;700&family=Roboto&display=swap');
+/* CSS reset */
 
-* {
-    box-sizing: border-box; 
-    padding: 0;
+html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, em, 
+img, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, 
+caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, 
+nav, section, menu, time, mark, audio, video
+{
     margin: 0; 
-    -webkit-box-sizing: border-box;
+    padding:0;
+    border:0; 
+    outline:0; 
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent; 
+} 
+article, aside, figure, footer, header, hgroup, nav, section { display:block; } 
+nav ul { list-style:none; }
+a { margin:0; padding:0; font-size:100%; vertical-align:baseline;
+background:transparent; text-decoration:none; }
+del { text-decoration: line-through; }
+input, select { vertical-align:middle; } 
+/* //end css reset  */
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400');
+
+html {font-size: 100%;} /*16px*/
+
+body {
+  background: white; 
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #262524;
 }
 
+p {margin-bottom: 1rem;}
 
-/* Defaults */
-:root {
-    --black: hsl(1, 1%, 3%);
-    --white: hsl(1, 1%, 97%);
-    --font: 'PT Sans', sans-serif;
-    --font-alt: 'Lato', sans-serif;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: border-box;
-  }
-  
-  html, body {
-    margin: 0;
-    height: 100%;
-  }
-
-  h1{
-    font-size: 3rem;
-    font-family: 'PT sans', sans-serif;  
-  }
-
-  h2{
-    font-size: 4rem; 
-  }
-
-  h3{
-    font-size: 2rem; 
-  }
-
-
-
-  p{
-    font-family: 'pt Sans', sans-serif;
-  }
-  
-
-
-  body {
-    background: white;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    
-  }
-  
-  h1 {
-    font-size: 1.6em;
-    margin-top: 25px;
-    font-weight: 600;
-  }
-  
-  p {
-    margin-top: 25px;
-    font-size: 1.2em;
-
-  }
-
-  @media (max-width:800) {
-     p{
-      font-size: 15px; 
-    }
-  }
-  
-  img {
-    display: block;
-    margin: 0 auto;
-  }
-
-  #nav-logo{
-    display: image-fluid; 
-    max-width: 10rem;
-    margin-bottom: 20px;
-    margin-top: -10px;   
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
 }
-  
 
-@media (max-width: 800px) {
-  .img-responsive{
-    height: 100%;
-    width: 100%; 
-  }
+h1 {
+  margin-top: 0;
+  font-size: 2.488rem;
 }
+
+h2 {font-size: 2.074rem;}
+
+h3 {font-size: 1.728rem;}
+
+h4 {font-size: 1.44rem;}
+
+h5 {font-size: 1.2rem;}
+
+small, .text_small {font-size: 0.833rem;}
+
 
 
 
@@ -97,94 +65,140 @@
 
 /* Nav TEST */
 
-*{
-  margin:0px;
-  padding:0px;
-  box-sizing: border-box;
-
-}
-nav{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
-  background-color: #cfcfcfa6;
-  font-family: 'Open Sans', sans-serif;
+nav {
+  background-color: #d5d5d590;  
+  padding: 0 20px;
 }
 
-.logo{
-  max-width:150px; 
-}
-.nav-links{
-  display: flex;
-  justify-content: space-around;
-  width: 30%;
-}
-.nav-links li{
-  list-style: none;
-}
-.nav-links a{
-  color:rgba(0, 0, 0, 0.53); 
+a {
+  color:#545454;
+  font-size: 22px;  
+  letter-spacing: 2px;    
   text-decoration: none;
-  letter-spacing: 3px;
+  font-weight: 400;
+}
+
+.nav-menu,
+.drop-down-menu {
+  list-style-type: none;
+  color: #FDF8F2; 
+}
+
+.item {
+  padding: 15px;
+}
+
+.item a:hover,
+.item a:hover::after {
+  color:  #262524;  
+}
+
+/* Mobile first */
+
+.nav-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-menu li a {
+  display: block;
+  padding: 20px 10px;
+}
+
+.nav-menu li.drop-down-item a {
+  padding: 17.5px;
+}
+
+.toggle {
+  order: 1;
+  font-size: 20px;
+}
+
+.item {
+  order: 2;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+
+.active .item {
+  display: block;
+}
+
+/* drop-down menu mobile */
+
+.drop-down-menu {
+  display: none;
+}
+
+.drop-down i {
+  font-size: 12px;
+}
+
+.drop-down-menu-active .drop-down-menu {
+  display: block;
+}
+
+.drop-down > a::after {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  line-height: 16px;
   font-weight: bold;
-  font-size: 14px;
+  content: "\f078";
+  color: #262524; 
+  padding-left: 10px;
 }
-.burger{
-  display:none;
-  cursor: pointer;
+
+.drop-down-item a {
+  padding: 20px 8px;
 }
-.burger div{
-  width: 25px;
-  height:3px;
-  background-color:rgb(96, 94, 94);
-  margin:5px;
+
+.drop-down-menu-active {
+  background-color: #262524; 
+  border-radius: 3px;
 }
-@media screen and (max-width:1024px){
-  body{
-      overflow: hidden;
-  }
-  }
-  .nav-links{
-      width: 60%;
+
+/* Desktop menu */
+@media all and (min-width: 960px) {
+  .nav-menu {
+      justify-content: center;
+      flex-wrap: nowrap;
+      background: none;
   }
 
-@media screen and (max-width:768px){
-      .nav-links{
-          position: absolute !important;
-          right:0px;
-          height:92vh;
-          top:8vh;
-          background-color:#cfcfcf;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          width:50%;
-          transform: translatex(100%);
-          transition:transform 0.5s ease-in;
-          z-index: 99; 
-      }
-      .nav-links li{
-          opacity:1;
-      }
-      .burger{
-          display: block;
-      }
-  }
-  .nav-active{
-      transform: translateX(0%);
+  .logo {
+      flex: 1;
+      order: 0;
   }
 
-  @keyframes navLinkFade{
-      from{
-          opacity: 0;
-          transform: translateX(50px);
-      }
-      to{
-          opacity: 1;
-          transform: translateX(0px);
-      }
+  .item {
+      order: 1;
+      position: relative;
+      display: block;
+      width: auto;
   }
+
+  .toggle {
+      flex: 1;
+      text-align: right;
+      order: 2;
+      display: none;
+  }
+
+  .drop-down-menu-active .drop-down-menu {
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 75px;
+      background: $backgroundcolor; 
+  }
+
+  .drop-down-menu-active {
+      border-radius: 0;
+  }
+
 
 
 
@@ -195,8 +209,8 @@ footer ul {
     margin: 0px;
     padding: 0px;
     font-family: 'open sans', sans-serif;
-   
 }
+
 .footer-section {
   background: #D9D9D9;
   position: relative;
@@ -348,26 +362,32 @@ footer ul {
 }
 .copyright-area{
   background: black;   
-  padding: 25px 0;
 }
 .copyright-text p {
   margin: 0;
   font-size: 14px;
   color: #878787;
+  margin-top: 30px;
 }
 .copyright-text p a{
-  color: #F29F05; 
+  color: #F29F05;
+  justify-content: center;
+  align-items: center; 
 }
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
-  
 }
 .footer-menu li:hover a{
   color: #F29F05; 
 }
 .footer-menu li a {
   font-size: 14px;
+  color: #878787;
+}
+
+footer a {
+  font-size: 15px;
   color: #878787;
 }
 
@@ -1197,12 +1217,19 @@ footer ul {
     }
   }
 
+  @media (max-width: 800px) {
+    .small-container{
+      max-width: 400px; 
+    }
+  }
 
 
   @media (max-width: 900px) {
     .grid-4  {
       grid-auto-flow: row dense;
-      grid-auto-columns: 2fr !important;
+      grid-auto-columns: 1fr !important;
+      margin-left: 30px; 
+      
   
     }
     .grid-4 div {
@@ -3114,20 +3141,13 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
 /* SEO KEY WORDS */
 
 
-.grid-background-none{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: none;  
-}
 
 #product-index-container {
-  color:rgba(255, 255, 255, 0.825); 
+   
   text-transform: uppercase;
-  font-size:46px;
+  font-size:36px;
   font-weight:bold;
-  padding-top:50px;  
-  width:100%;
-  bottom:45%;
+ 
   display:block;
 }
 
@@ -3136,33 +3156,9 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
   overflow:hidden;
 }
 
-@media (max-width: 800px) {
-  #flip{
-    font-size: 20px; 
-  }
-}
 
-@media (max-width: 800px) {
-  #product-index-container{
-    display: none;
-    visibility: hidden;  
-  }
-}
 
-@media (max-width: 800px) {
-  .product-index-container-800px{
-    display: flex; 
-    justify-items: center;
-  }
-}
 
-@media (min-width: 800px) {
-
-#product-index-container-800px{
-  display: none; 
-  visibility: hidden; 
-  }
-}
 
 #flip > div > div {
   color: rgba(0, 0, 0, 0.727); 
